--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<h1 class="text-gray-300">Hello World</h1>
 		<div
-			class="w-full h-screen mask bg-gradient-to-br from-slate-200 to-transparent"
+			class="w-full h-screen masked bg-gradient-to-br from-slate-200 to-transparent"
 		></div>
 		<script src="scripts.js" type="module"></script>
 	</body>
